lang/DOT.g4
/*
 [The "BSD licence"]
 Copyright (c) 2013 Terence Parr
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 1. Redistributions of source code must retain the above copyright
    notice, this list of conditions and the following disclaimer.
 2. Redistributions in binary form must reproduce the above copyright
    notice, this list of conditions and the following disclaimer in the
    documentation and/or other materials provided with the distribution.
 3. The name of the author may not be used to endorse or promote products
    derived from this software without specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
 OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
 INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
 NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
/** Derived from http://www.graphviz.org/doc/info/lang.html.
    Comments pulled from spec.
 */

// $antlr-format alignTrailingComments true, columnLimit 150, minEmptyLines 1, maxEmptyLinesToKeep 1, reflowComments false, useTab false
// $antlr-format allowShortRulesOnASingleLine false, allowShortBlocksOnASingleLine true, alignSemicolons hanging, alignColons hanging

grammar DOT;

graph
    : STRICT? (GRAPH | DIGRAPH) id_? '{' stmt_list '}' EOF
    ;

stmt_list
    : (stmt ';'?)*
    ;

stmt
    : node_stmt
    | edge_stmt
    | attr_stmt
    | id_ '=' id_
    | subgraph
    ;

attr_stmt
    : (GRAPH | NODE | EDGE) attr_list
    ;
    
attr_list
    : ('[' a_list ']')+
    ;

// enforces existence of type attribute at syntax level for nodes
node_attr_list
    : ('[' generic_attr* type_attr generic_attr* ']')+
    ;
/* could explicitly peice out each type of node to enforce properties for each node
e.g.:
QUEUE_node_stmt
    : node_id queue_attr_list
    ;

// attributes must include type, depth
queue_attr_list
    : ('[' generic_attr* 'type' '=' QUEUE generic_attr* ']')+
    ;


*/

edge_attr_list
    : ('[' generic_attr+ ']')+
    ;

generic_attr
    : pipeline_delay_attr
    | priority_attr
    | cv_attr
    | depth_attr
    | rate_attr
    | service_time_attr
    | coeff_service_time_attr
    | zero_load_latency_attr
    | split_attr
    | map_attr
    | latency_attr
    | attr_
    ;

cv_attr
    : CV '=' NUMBER (';' | ',')?
    ;

service_time_attr
    : T_SERV '=' NUMBER (';' | ',')?
    ;

coeff_service_time_attr
    : COEFF_VAR '=' NUMBER (';' | ',')?
    ;

split_attr
    : S_ATTR '=' NUMBER (';' | ',')?
    ;

zero_load_latency_attr
    : ZERO_LOAD '=' NUMBER (';' | ',')?
    ; 

depth_attr
    : DEPTH '=' NUMBER (';' | ',')?
    | SIZE '=' NUMBER (';' | ',')?
    ;

priority_attr
    : PRIORITY_NO '=' NUMBER (';' | ',')?
    ;

rate_attr
    : RATE '=' NUMBER (';' | ',')?
    ;

pipeline_delay_attr
    : PIPELINE_DELAY '=' NUMBER (';' | ',')?
    ;

map_attr
    : id_ '=' '{' mapPair (',' mapPair)* '}' (';'|',')?
    ;

mapPair
    : id_ ':' NUMBER
    ;

latency_attr
    : LATENCY '=' expr (';' | ',')?
    ;

expr
    : term ('+' term)*
    ;

term
    : NUMBER
    | id_
    ;

type_attr
    : 'type' '=' type_ (';' | ',')?
    ;

type_
    : SOURCE
    | QUEUE
    | ARBITER
    | ROUNDROBIN
    | PRIORITY
    | HYBRID
    | SERVER
    | SPLIT
    | SINK
    ;

a_list
    : attr_+
    ;

attr_
    : (id_ ( '=' id_)? (';' | ',')?)
    ;

edge_stmt
    : (node_id | subgraph) edgeRHS edge_attr_list?
    ;

edgeRHS
    : (edgeop ( node_id | subgraph))+
    ;

edgeop
    : '->'
    | '--'
    ;

node_stmt
    : node_id node_attr_list
    ;

node_id
    : id_ port?
    ;

port
    : ':' id_ (':' id_)?
    ;

subgraph
    : (SUBGRAPH id_?)? '{' stmt_list '}'
    ;

id_
    : ID
    | STRING
    | HTML_STRING
    | NUMBER
    | SOURCE
    ;

// syntactic elements specialized for noc
CV
    : [Cc] [Vv] ('2')?
    ;

T_SERV
    : [Tt] '_'? [Ss] [Ee] [Rr] [Vv]
    ;

S_ATTR
    : [Ss] [0-9]+
    ;

COEFF_VAR
    : [Cc] [Oo] [Ee] [Ff] [Ff] '_'? [Vv] [Aa] [Rr]
    ;

ZERO_LOAD
    : [Zz] [Ee] [Rr] [Oo] '_'? [Ll] [Oo] [Aa] [Dd]
    ;

DEPTH
    : [Dd] [Ee] [Pp] [Tt] [Hh]
    ;

PRIORITY_NO
    : [Pp] [Rr] [Ii] [Oo] [Rr] [Ii] [Tt] [Yy] '_'? [Nn] [Oo]
    ;

SIZE
    : [Ss] [Ii] [Zz] [Ee]
    ;

RATE
    : [Rr] [Aa] [Tt] [Ee]
    ;

LATENCY
    : [Ll] [Aa] [Tt] [Ee] [Nn] [Cc] [Yy]
    ;

PIPELINE_DELAY
    : [Pp] [Ii] [Pe] [Ee] [Ll] [Ii] [Nn] [Ee] '_'? [Dd] [Ee] [Ll] [Aa] [Yy]
    ;

SOURCE
    : [Ss] [Oo] [Uu] [Rr] [Cc] [Ee]
    ;

QUEUE
    : [Qq] [Uu] [Ee] [Uu] [Ee]
    ;

ARBITER
    : [Aa] [Rr] [Bb] [Ii] [Tt] [Ee] [Rr]
    ;

ROUNDROBIN
    : [Rr] [Oo] [Uu] [Nn] [Dd] [Rr] [Oo] [Bb] [Ii] [Nn]
    ;

PRIORITY
    : [Pp] [Rr] [Ii] [Oo] [Rr] [Ii] [Tt] [Yy]
    ;

HYBRID
    : [Hh] [Yy] [Bb] [Rr] [Ii] [Dd]
    ;

SERVER
    : [Ss] [Ee] [Rr] [Vv] [Ee] [Rr]
    ;

SPLIT
    : [Ss] [Pp] [Ll] [Ii] [Tt]
    ;

SINK
    : [Ss] [Ii] [Nn] [Kk]
    ;

// "The keywords node, edge, graph, digraph, subgraph, and strict are
// case-independent"
STRICT
    : [Ss] [Tt] [Rr] [Ii] [Cc] [Tt]
    ;

GRAPH
    : [Gg] [Rr] [Aa] [Pp] [Hh]
    ;

DIGRAPH
    : [Dd] [Ii] [Gg] [Rr] [Aa] [Pp] [Hh]
    ;

NODE
    : [Nn] [Oo] [Dd] [Ee]
    ;

EDGE
    : [Ee] [Dd] [Gg] [Ee]
    ;

SUBGRAPH
    : [Ss] [Uu] [Bb] [Gg] [Rr] [Aa] [Pp] [Hh]
    ;

/** "a numeral [-]?(.[0-9]+ | [0-9]+(.[0-9]*)? )" */
NUMBER
    : '-'? ('.' DIGIT+ | DIGIT+ ( '.' DIGIT*)?)
    ;

fragment DIGIT
    : [0-9]
    ;

/** "any double-quoted string ("...") possibly containing escaped quotes" */
STRING
    : '"' ('\\"' | .)*? '"'
    ;

/** "Any string of alphabetic ([a-zA-Z\200-\377]) characters, underscores
 *  ('_') or digits ([0-9]), not beginning with a digit"
 */
ID
    : LETTER (LETTER | DIGIT)*
    ;

fragment LETTER
    : [a-zA-Z\u0080-\u00FF_]
    ;

/** "HTML strings, angle brackets must occur in matched pairs, and
 *  unescaped newlines are allowed."
 */
HTML_STRING
    : '<' (TAG | ~ [<>])* '>'
    ;

fragment TAG
    : '<' .*? '>'
    ;

COMMENT
    : '/*' .*? '*/' -> skip
    ;

LINE_COMMENT
    : '//' .*? '\r'? '\n' -> skip
    ;

/** "a '#' character is considered a line output from a C preprocessor (e.g.,
 *  # 34 to indicate line 34 ) and discarded"
 */
PREPROC
    : '#' ~[\r\n]* -> skip
    ;

WS
    : [ \t\n\r]+ -> skip
    ;
